deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: canary-test
  name: flagger-test
  namespace: flagger-test
spec:
  selector:
    matchLabels:
      app: canary-test
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canary-test
    spec:
      containers:
      - args: ["-k", "-l","3000"]
        image: itsthenetwork/alpine-ncat:latest
        imagePullPolicy: Always
        name: canary-test
